--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,3 @@
-*.css linguist-detectable=true
-*.js linguist-detectable=true
+*.css linguist-detectable=false
+*.js linguist-detectable= false
 *.html linguist-detectable=true
